[package]
name = "monty-hall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarty = "0.2.0"
env_logger = "0.9.1"
fraction = "0.11.2"
log = "0.4.17"
percentage = "0.1.0"
progressing = "3.0.2"
rand = "0.8.5"
soloud = "1.0.2"
