[package]
name = "monty-hall"
version = "0.3.2"
edition = "2021"
description = "A Rust implementation of the expiremental probablity of the monty hall problem"
license = "GNU GENERAL PUBLIC LICENSE 3.0"
repository = "https://github.com/Penultimate-Panacea/monty-hall/"
keywords = ["Probability", "Goats"]
categories = ["Math","Fun"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.13.1"
kdam = "0.3.0"
rand = "0.8.5"
tqdm = "0.5.0"
